k8s/apps/multimedia/rtorrent-flood/namespace.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rtorrent-flood
  labels:
    routed-gateway: "true"
    pod-security.kubernetes.io/enforce: privileged
