k8s/apps/multimedia/rtorrent-flood/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtorrent-flood
  namespace: rtorrent-flood
  labels:
    app.kubernetes.io/name: rtorrent-flood
    app.kubernetes.io/instance: rtorrent-flood
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: rtorrent-flood
      app.kubernetes.io/instance: rtorrent-flood
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rtorrent-flood
        app.kubernetes.io/instance: rtorrent-flood
    spec:
      hostname: rtorrent-flood
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: flood
          image: docker.io/jesec/flood:master
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: rtorrent-sock
              mountPath: /data/sock
            - name: rtorrent-config
              subPath: rtorrent.rc
              mountPath: /etc/rtorrent/rtorrent.rc
            - name: multimedia
              mountPath: /multimedia
        - name: rtorrent
          image: docker.io/jesec/rtorrent:0.9.8-r16
          volumeMounts:
            - name: rtorrent-sock
              mountPath: /data/sock
            - name: rtorrent-session
              mountPath: /data/session
            - name: rtorrent-config
              subPath: rtorrent.rc
              mountPath: /etc/rtorrent/rtorrent.rc
            - name: multimedia
              mountPath: /multimedia
      volumes:
        - name: rtorrent-sock
          emptyDir:
            medium: Memory
        - name: rtorrent-session
          persistentVolumeClaim:
            claimName: rtorrent-session
        - name: rtorrent-config
          configMap:
            name: rtorrent-config
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
