k8s/apps/multimedia/rtorrent-flood/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtorrent-flood
  namespace: rtorrent-flood
  labels:
    app.kubernetes.io/name: rtorrent-flood
    app.kubernetes.io/instance: rtorrent-flood
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rtorrent-flood
    app.kubernetes.io/instance: rtorrent-flood
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
